Added some documentation Loading Animation Setup Dialog (Side to move, Castling Flags, EnPassant Square, ..)

--- a/PonzianiDemo/wwwroot/index.html
+++ b/PonzianiDemo/wwwroot/index.html
@@ -12,7 +12,15 @@
 </head>
 
 <body>
-    <div id="app">Loading...</div>
+    <div id="app" style="margin: 0 auto; width: 100vw; height: 100vh">
+        <div class="text-center pt-3" style="color: green; font-size: 16pt">
+            Loading...
+        </div>
+        <div class="text-center mt-3">
+            <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"
+                  style="font-size: 16pt; width: 36px; height: 36px; color: green" />
+        </div>
+    </div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
